# Ganesh

./: .gitignore  LICENSE  README.md  package.json
.sisyphus/: boulder.json
backend/: main.py  pyinstaller-full.spec  pyinstaller-minimal.spec  pyinstaller.spec  pyproject.toml
backend/:memory:/__manifest/_transactions/: 0-e85e6fb3-0d5f-4af0-bbbb-b188b0183f96.txn
backend/:memory:/ganesh_memories.lance/_transactions/: 0-f40895de-7ed0-43de-8862-47be749cb7b3.txn  1-31091e95-95ce-4894-8b47-8c299d0c9c55.txn  2-f0ef0b32-e328-4829-874d-33a1d51087c2.txn  3-eb795891-3a32-4c75-9383-fc24b9028b67.txn  4-4435d174-80bf-45e2-ac0a-85fcbecdbe67.txn  5-e5dd1a76-b9e1-4cb2-89df-011baf1ad21b.txn  6-f00cf5f1-c0b4-43c8-8941-97e08b806f87.txn  7-0de152a8-a6fa-4be4-9a6d-28e1172800ba.txn  8-0a067dba-570b-462a-aa1e-674bc7fcc98f.txn  9-07100a58-98ed-4494-bd11-f88b4a430ad1.txn
backend/:memory:/test.lance/_transactions/: 0-511746b5-246b-4b3d-aaa3-8b5ce7b845b8.txn
backend/:memory:/test_memories_08a1a911.lance/_transactions/: 0-84c60bea-50a6-4065-987e-41400a833b23.txn  1-29100375-fbd7-4775-a6ef-6ab49413d202.txn  2-46aa7750-d473-488a-8cdf-4294b5afb5ed.txn  3-dc062810-b990-40fd-b80e-e7b51c68a2d2.txn
backend/:memory:/test_memories_3f8d81ba.lance/_transactions/: 0-25961e9b-ecae-4edb-8f7b-4dc4c911ed24.txn  1-b5c579d1-af6b-490f-937f-50068079837a.txn  2-224eba24-8798-4e1c-b7c7-1cde3dc44adb.txn  3-3ba0921e-b642-4697-9133-d0d79d3ab0a5.txn
backend/:memory:/test_memories_47054193.lance/_transactions/: 0-0b11f5b8-5244-4b4b-b311-ed78799f2954.txn  1-5ec34de6-cac1-4334-9345-bd8d2a8ddfa6.txn  2-af389755-e0c5-45c0-9cd4-0dd4fcb8b6db.txn  3-560fe24e-51ed-448d-b65d-6d1f4e7ac342.txn
backend/:memory:/test_memories_6147d9c3.lance/_transactions/: 0-45feea48-4b97-4e8b-b433-f9d6f3e783cf.txn  1-ced3d451-6435-4a41-9cc2-a7568a4c8349.txn  2-f12600e1-90f9-4591-9df3-9639c4e98ee5.txn
backend/ganesh_backend/: __init__.py  embeddings.py  vector_store.py
backend/ganesh_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/ganesh_backend/routers/: __init__.py  agents.py  chat.py  config.py  continuity.py  conversations.py  emotion.py  files.py  memory.py  models.py  patterns.py  personality.py  plugins.py  profiles.py  search.py  tasks.py  voice.py
backend/ganesh_backend/services/: __init__.py  bridge.py  config.py  continuity.py  conversations.py  emotion.py  llm.py  memory.py  model_manager.py  orchestrator.py  patterns.py  personality.py  plugin_loader.py  plugin_registry.py  profiles.py  search.py  stt.py  sub_agent.py  suggestion_engine.py  summary.py  summary_embeddings.py  summary_retrieval.py  task_manager.py  tts.py  voice_activation.py
backend/plugins/example/: manifest.json  plugin.py
backend/tests/: test_chat.py  test_ci_yaml.py  test_config.py  test_continuity.py  test_conversation_memory_integration.py  test_conversations.py  test_emotion.py  test_files.py  test_health.py  test_installer_variants.py  test_llm_providers.py  test_local_llm.py  test_memory.py  test_models.py  test_native_deps.py  test_no_hardcoded_ports.py  test_patterns.py  test_personality.py  test_plugins.py  test_preflight.py  test_profiles.py  test_project_structure.py  test_recovery.py  test_search.py  test_stt.py  test_sub_agent.py  test_summary.py  test_summary_embeddings.py  test_summary_retrieval.py  test_task_manager.py  test_tts.py  test_voice_activation.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  update.rs
(+166 files in other folders)
