[project]
name = "ganesh-backend"
version = "0.1.0"
description = "Backend for Ganesh AI Assistant"
dependencies = [
    "fastapi",
    "uvicorn",
    "litellm",
    "pydantic",
    "keyring",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
