[project]
name = "ganesh-backend"
version = "0.1.0"
description = "Backend for Ganesh AI Assistant"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "litellm",
    "pydantic",
    "keyring",
    "pyyaml",
    "python-multipart",
    "lancedb",
    "mem0ai",
    "piper-tts",
    "vaderSentiment",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "httpx",
]
prod = [
    "sentence-transformers",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["venv"]
ignore_missing_imports = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
