[package]
name = "ganesh"
version = "0.1.0"
description = "Ganesh AI Assistant"
authors = ["Derrik"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[lib]
name = "ganesh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ganesh"
path = "src/main.rs"
